<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@drawable/background_white"
            android:orientation="horizontal"
            android:padding="20dp"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TVHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/header"
                    android:textColor="@color/gunmetal"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/TVDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:text="@string/text"
                    android:textColor="@color/gunmetal"
                    android:textSize="12dp" />

                <android.widget.Button
                    android:layout_width="189dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="50dp"
                    android:background="@drawable/button_background_gunmetal"
                    android:text="@string/more"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="15dp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:background="@drawable/background_white"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imageQuotes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>